Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: N/A
-
Fix Version/s: 10.3.4
-
Labels:None
Description
CREATE OR REPLACE TEMPORARY TABLE t (a INT); |
ALTER TABLE t CHANGE COLUMN IF EXISTS b c BIGINT UNSIGNED GENERATED ALWAYS AS ROW START; |
bb-10.3-temporal 2ae2876a6ce4b1e |
#3 <signal handler called>
|
#5 0x0000558698000b90 in MDL_context::upgrade_shared_lock (this=0x7f987c000c08, mdl_ticket=0x0, new_type=MDL_EXCLUSIVE, lock_wait_timeout=86400) at /data/src/bb-10.3-temporal/sql/mdl.cc:2329
|
#6 0x00005586981841f0 in Vers_parse_info::fix_alter_info (this=0x7f988e106dd8, thd=0x7f987c000b00, alter_info=0x7f988e106be0, create_info=0x7f988e106c90, table=0x7f987c00d130) at /data/src/bb-10.3-temporal/sql/handler.cc:7190
|
#7 0x0000558697f6f46b in mysql_alter_table (thd=0x7f987c000b00, new_db=0x7f987c0153d8 "test", new_name=0x0, create_info=0x7f988e106c90, table_list=0x7f987c014da0, alter_info=0x7f988e106be0, order_num=0, order=0x0, ignore=false) at /data/src/bb-10.3-temporal/sql/sql_table.cc:9027
|
#8 0x0000558697ff8f61 in Sql_cmd_alter_table::execute (this=0x7f987c015500, thd=0x7f987c000b00) at /data/src/bb-10.3-temporal/sql/sql_alter.cc:331
|
#9 0x0000558697e9c5a5 in mysql_execute_command (thd=0x7f987c000b00) at /data/src/bb-10.3-temporal/sql/sql_parse.cc:6258
|
#10 0x0000558697ea10e4 in mysql_parse (thd=0x7f987c000b00, rawbuf=0x7f987c014c48 "ALTER TABLE t CHANGE COLUMN IF EXISTS b c BIGINT UNSIGNED GENERATED ALWAYS AS ROW START", length=87, parser_state=0x7f988e1085f0, is_com_multi=false, is_next_command=false) at /data/src/bb-10.3-temporal/sql/sql_parse.cc:7988
|
#11 0x0000558697e8e8a7 in dispatch_command (command=COM_QUERY, thd=0x7f987c000b00, packet=0x7f987c11ee21 "ALTER TABLE t CHANGE COLUMN IF EXISTS b c BIGINT UNSIGNED GENERATED ALWAYS AS ROW START", packet_length=87, is_com_multi=false, is_next_command=false) at /data/src/bb-10.3-temporal/sql/sql_parse.cc:1826
|
#12 0x0000558697e8d2db in do_command (thd=0x7f987c000b00) at /data/src/bb-10.3-temporal/sql/sql_parse.cc:1371
|
#13 0x0000558697ff3ada in do_handle_one_connection (connect=0x55869a6cd620) at /data/src/bb-10.3-temporal/sql/sql_connect.cc:1420
|
#14 0x0000558697ff3867 in handle_one_connection (arg=0x55869a6cd620) at /data/src/bb-10.3-temporal/sql/sql_connect.cc:1326
|
#15 0x0000558698489cfc in pfs_spawn_thread (arg=0x55869a6d5590) at /data/src/bb-10.3-temporal/storage/perfschema/pfs.cc:1863
|
#16 0x00007f9895b70494 in start_thread (arg=0x7f988e109700) at pthread_create.c:333
|
#17 0x00007f9893f5693f in clone () from /lib/x86_64-linux-gnu/libc.so.6
|